# xtkWorld

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  base_direct.cpp  base_direct.h  device.cpp  device.h  direct_world.cpp  direct_world.h  effect.fx  image.cpp  image.h  main.cpp  main.h  obj.cpp  obj.h  ps.hlsl  test.cpp  type.h  util.cpp  util.h  vs.hlsl
