cmake_minimum_required(VERSION 3.15)
project(DX)
IF(WIN32)
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /subsystem:windows") 
ENDIF(WIN32)
set(CMAKE_CXX_STANDARD 17)
include_directories("e:\\usr\\deb\\FMT\\include" "e:\\usr\\include" e:\\usr\\include\\DXH\\Inc)
link_directories("e:\\usr\\deb\\FMT\\lib" "e:\\usr\\lib")
add_executable(dxworld main.cpp util.cpp device.cpp image.cpp)
target_link_libraries(dxworld fmtd d3d11 d3dcompiler DirectXTK)
