cmake_minimum_required(VERSION 3.15)
project(DX)
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /subsystem:windows") 
set(CMAKE_CXX_STANDARD 17)
include_directories("e:\\usr\\include" e:\\usr\\include\\DXH\\Inc)
link_directories("e:\\usr\\deb\\FMT\\lib" "e:\\usr\\lib")
add_executable(dxworld main.cpp base_direct.cpp direct_world.cpp obj.cpp tiny_obj_loader.cc)
target_link_libraries(dxworld d3d11 d3dcompiler DirectXTK)
